--- a/src/styles/_paragraph.scss
+++ b/src/styles/_paragraph.scss
@@ -2,9 +2,7 @@
   position: relative;
   text-indent: 2em;
   text-align: justify;
-  text-justify: inter-ideograph;
-  text-autospace: ideograph-alpha;
-  hyphens: auto;
+  text-justify: distribute;
 }
 
 
